<resources>
    <string name="app_name">GitHub Repos</string>
    <string name="loading_error_message">Something went wrong. Please try again with a different query or check your Internet connection.</string>
    <string name="no_language">Language not specified</string>
    <string name="search_hint">Type a keyword</string>
    <string name="no_description">No description provided.</string>
    <string name="view_on_github">View on github.com</string>
    <string name="github_stars_content_desc">GitHub stars</string>
    <string name="github_forks_content_desc">GitHub forks</string>
    <string name="language_text">Language: %s</string>
    <string name="repo_stats">Repo stats:</string>
    <string name="retry_button">Retry</string>
    <string name="content_description_avatar">Repo owner\'s avatar image</string>
</resources>