<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/general_margin">

            <TextView
                android:id="@+id/detailRepoNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                style="@style/TitleText"
                tools:text="lockquote" />

            <ImageView
                android:id="@+id/detailOwnerAvatar"
                android:layout_width="@dimen/tiny_avatar_size"
                android:layout_height="@dimen/tiny_avatar_size"
                android:adjustViewBounds="true"
                android:contentDescription="@string/content_description_avatar"
                app:layout_constraintEnd_toStartOf="@id/detailRepoOwnerTextView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/detailRepoNameTextView" />

            <TextView
                android:id="@+id/detailRepoOwnerTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/padding_small"
                android:paddingBottom="@dimen/padding_large"
                app:layout_constraintStart_toEndOf="@id/detailOwnerAvatar"
                app:layout_constraintTop_toBottomOf="@id/detailRepoNameTextView"
                app:layout_constraintBottom_toTopOf="@id/detailRepoDescriptionTextView"
                tools:text="stacyjacks" />

            <TextView
                android:id="@+id/detailRepoDescriptionTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/padding_large"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/detailRepoOwnerTextView"
                tools:text="@string/no_description" />

            <TextView
                android:id="@+id/detailRepoLanguageTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/padding_large"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/detailRepoDescriptionTextView"
                tools:text="Language: Kotlin" />

            <TextView
                android:id="@+id/detailStatsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/padding_medium"
                android:textSize="@dimen/text_size_medium"
                android:text="@string/repo_stats"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/detailRepoLanguageTextView" />

            <LinearLayout
                android:id="@+id/detailStatsDataLL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/padding_large"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/detailStatsTextView">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/github_stars_content_desc"
                    app:srcCompat="@drawable/ic_baseline_star_border_24" />

                <TextView
                    android:id="@+id/detailStarCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingHorizontal="@dimen/padding_medium"
                    tools:text="0" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/github_forks_content_desc"
                    app:srcCompat="@drawable/ic_baseline_fork_24" />

                <TextView
                    android:id="@+id/detailForkCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingHorizontal="@dimen/padding_medium"
                    tools:text="0" />

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/viewOnGitHubButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/view_on_github"
                app:icon="@drawable/ic_baseline_open_in_new_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/detailStatsDataLL" />

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/progressCircularDetail"
                style="@style/Widget.MaterialComponents.CircularProgressIndicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_medium"
                android:indeterminate="true"
                android:indeterminateBehavior="cycle"
                android:visibility="gone"
                app:trackThickness="@dimen/circular_indicator_thickness"
                app:indicatorColor="@array/colors_loading"
                app:indicatorSize="@dimen/circular_indicator_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:indicatorDirectionCircular="clockwise"
                app:showAnimationBehavior="inward"
                tools:visibility="visible" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</layout>